{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 177,
  "lineage": "1e218030-ddff-37b8-102a-3dfc34114d21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_node_a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c79ceab761d37c3",
            "arn": "arn:aws:ec2:us-east-1:523417327743:instance/i-0adc3acded70da234",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adc3acded70da234",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "sonafied-nodes",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e4d654bae54830d",
            "private_dns": "ip-10-0-1-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fcddc0663184a702",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00484a6da393835fb",
            "tags": {
              "Name": "sonafied-control-node-a"
            },
            "tags_all": {
              "Name": "sonafied-control-node-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7c2488ee865f619"
            ]
          },
          "dependencies": [
            "aws_instance.sonafied_bastion",
            "aws_security_group.nodes_sg",
            "aws_security_group.sonafied_bastion_sg",
            "aws_subnet.public",
            "aws_subnet.sonafied_subnet_a",
            "aws_vpc.sonafied_vpc",
            "data.aws_ami.debian_12"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonafied_bastion",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c79ceab761d37c3",
            "arn": "arn:aws:ec2:us-east-1:523417327743:instance/i-0186b3b9d7cf1e2a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0186b3b9d7cf1e2a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "griffinsmacbook",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01048d08ff120beb1",
            "private_dns": "ip-10-0-0-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.182",
            "public_ip": "54.227.32.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0188a943984e25340",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2be86fade8cc628",
            "tags": {
              "Name": "sonafied-bastion"
            },
            "tags_all": {
              "Name": "sonafied-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03da88a23c9e598a2"
            ]
          },
          "dependencies": [
            "aws_security_group.sonafied_bastion_sg",
            "aws_subnet.public",
            "aws_vpc.sonafied_vpc",
            "data.aws_ami.debian_12"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sonafied_igw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:internet-gateway/igw-02b6b7e179db52a08",
            "id": "igw-02b6b7e179db52a08",
            "owner_id": "523417327743",
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sonafied_worker_lb",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:523417327743:loadbalancer/app/sonafied-worker-loadbalancer/6b5d35710575118b",
            "arn_suffix": "app/sonafied-worker-loadbalancer/6b5d35710575118b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sonafied-worker-loadbalancer-2043744984.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:523417327743:loadbalancer/app/sonafied-worker-loadbalancer/6b5d35710575118b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sonafied-worker-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ad72689c208daca3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00484a6da393835fb"
              },
              {
                "subnet_id": "subnet-02fd5616fc4d74a31"
              },
              {
                "subnet_id": "subnet-0b38538a6c21f2024"
              }
            ],
            "subnets": [
              "subnet-00484a6da393835fb",
              "subnet-02fd5616fc4d74a31",
              "subnet-0b38538a6c21f2024"
            ],
            "vpc_id": "vpc-0c6287c3372e6cf6f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sonafied_alb_sg",
            "aws_subnet.sonafied_subnet_a",
            "aws_subnet.sonafied_subnet_b",
            "aws_subnet.sonafied_subnet_c",
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:route-table/rtb-080f805eab1e0ff86",
            "id": "rtb-080f805eab1e0ff86",
            "owner_id": "523417327743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b6b7e179db52a08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sonafied_igw",
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088d2f1018d4c5f91",
            "route_table_id": "rtb-080f805eab1e0ff86",
            "subnet_id": "subnet-0e2be86fade8cc628"
          },
          "dependencies": [
            "aws_internet_gateway.sonafied_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:security-group/sg-0c7c2488ee865f619",
            "description": "Security group for Kubernetes nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7c2488ee865f619",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.182/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.182/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nodes-sg",
            "name_prefix": "",
            "owner_id": "523417327743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.sonafied_bastion",
            "aws_security_group.sonafied_bastion_sg",
            "aws_subnet.public",
            "aws_vpc.sonafied_vpc",
            "data.aws_ami.debian_12"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonafied_alb_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:security-group/sg-0ad72689c208daca3",
            "description": "Security group for ALB",
            "egress": [],
            "id": "sg-0ad72689c208daca3",
            "ingress": [],
            "name": "sonafied-alb-sg",
            "name_prefix": "",
            "owner_id": "523417327743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonafied_bastion_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:security-group/sg-03da88a23c9e598a2",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03da88a23c9e598a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "523417327743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonafied_vpc_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:security-group/sg-07c0250bfc2ae1af3",
            "description": "Sonafied VPC security group",
            "egress": [],
            "id": "sg-07c0250bfc2ae1af3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sonafied-vpc-sg",
            "name_prefix": "",
            "owner_id": "523417327743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_traffic",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-214973882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad72689c208daca3",
            "security_group_rule_id": "sgr-060c47513072cbe29",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sonafied_alb_sg",
            "aws_vpc.sonafied_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:subnet/subnet-0e2be86fade8cc628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2be86fade8cc628",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523417327743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonafied_subnet_a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:subnet/subnet-00484a6da393835fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00484a6da393835fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523417327743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonafied-subnet-a"
            },
            "tags_all": {
              "Name": "sonafied-subnet-a"
            },
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonafied_subnet_b",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:subnet/subnet-0b38538a6c21f2024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b38538a6c21f2024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523417327743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonafied-subnet-b"
            },
            "tags_all": {
              "Name": "sonafied-subnet-b"
            },
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonafied_subnet_c",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:subnet/subnet-02fd5616fc4d74a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fd5616fc4d74a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523417327743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonafied-subnet-c"
            },
            "tags_all": {
              "Name": "sonafied-subnet-c"
            },
            "vpc_id": "vpc-0c6287c3372e6cf6f"
          },
          "dependencies": [
            "aws_vpc.sonafied_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sonafied_vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523417327743:vpc/vpc-0c6287c3372e6cf6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082728eff96c4ad41",
            "default_route_table_id": "rtb-0a5cd10610e7c33d8",
            "default_security_group_id": "sg-09383ce6b3f359415",
            "dhcp_options_id": "dopt-ef204795",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6287c3372e6cf6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5cd10610e7c33d8",
            "owner_id": "523417327743",
            "tags": {
              "Name": "sonafied-vpc"
            },
            "tags_all": {
              "Name": "sonafied-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}